
  ChangeLog for the eggleton-tools repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
    91: AstroFloyd, 13/07/2010
     - Store screen size + dpi in settings file iso paper size/ratio
    
    90: AstroFloyd, 13/07/2010
     - Added routine eggletonplot_settings() to read write a settings file in the user's
       home directory
    
    89: AstroFloyd, 13/07/2010
     - Plotplt: added variables 139,140: Mzams-M, (Mzams-M)/Mzams
     
    85: AstroFloyd, 13/07/2010
     - Renamed module basic to kinds
     
    83: AstroFloyd, 25/06/2010
     - Compile code with NAG Fortran, update Makefile
    
    78: AstroFloyd, 12/04/2010
     - Minor updates in plotplt
    
    77: AstroFloyd, 12/04/2010
     - Added code version
    
    76: AstroFloyd, 12/04/2010
     - Moved source, object and module files to subdirs
    
    75: AstroFloyd, 12/04/2010
     - Renamed plotplt_new.f to plotplt.f
    
    74: AstroFloyd, 11/04/2010
     - Added old plotplt.f as plotplt_r066.f
     - Added nagfor.f with dummy routines
     
    73: AstroFloyd, 11/04/2010
     - Everything in plot/ compiles with nagfor (warnings off)
    
    72: AstroFloyd, 11/04/2010
     - developing plotplt_new: fixing details
       - added entry in Makefile
       - use both pglabels and asclabels, use the latter for PS file names and title
       - fix strmdl (version doesn't work because of unformatted read)
         - plotting where structure models were stored now works
       - print legenda when using multiple input files
           
    71: AstroFloyd, 11/04/2010
     - developing plotplt_new: replaced f,nf with pl,npl in most places
     - adapted getpltlabels(), printpltvarlist() and pltconvection()
     - most things seem to work
     
    70: AstroFloyd, 11/04/2010
     - developing plotplt_new: added a dimension to variables (e.g. dat(:,:) -> dat(:,:,:))
     - to do: distinguish between multi-variable (ny) and multi-file plots (nf)